2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (applier_apply_prefs): Don't try to load the wallpaper
	if it's not enabled

	* preferences.c (preferences_new_from_bonobo_pbag): Use
	bonobo_property_editor_client_get_value_*
	(preferences_new_from_bonobo_pbag): Set gradient_enabled properly
	from property bag
	(preferences_new_from_bonobo_pbag): Check for wallpaper == "(none)"
	(preferences_new_from_bonobo_db): Ditto above

	* applier.c (renderer_render_wallpaper): Restore some lost tweaks
	from earlier.

	* preferences.c (preferences_init): strdup the home directory

	* applier.c: Store preview widget in the renderer, not the applier
	itself

	* background-properties-capplet.c (create_dialog): Add a "(none)"
	string to the history

2001-07-26  Richard Hestilow  <hestilow@ximian.com>

	* applier.c: Remove all bonobo-conf stuff.

	* preferences.[ch]: New functions preferences_new_from_bonobo_pbag
	and preferences_new_from_bonobo_db.

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties.glade: Tweak borders and padding

	* applier.c (get_geometry): Tweak geometry settings
	(renderer_render_wallpaper): Rendering geometry fixes
	(renderer_render_wallpaper): Remove debugging code

	* background-properties-capplet.c (property_change_cb): Accept
	applier as argument; retrieve property bag from applier
	(realize_cb): Retrieve applier from widget
	(setup_dialog): Store property bag in applier

	* applier.c (renderer_new): Store applier inside renderer; accept
	applier as function parameter

	* background-properties-capplet.c (create_dialog): Store the
	applier inside the widget

	* applier.c (struct _ApplierPrivate ): Define preview_widget here
	rather than globally
	(applier_get_preview_widget): Make this a method of the applier class

2001-07-25  Chema Celorio  <chema@celorio.com>

	* Makefile.am ($(oaffile)): remove the oaffile_IN_RULE macro and copy
	it here